--- a/Apple_stock_analysis.ipynb
+++ b/Apple_stock_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,8 @@
     "%pip install statsmodels\n",
     "%pip install tensorflow\n",
     "%pip install keras_tuner\n",
-    "%pip install keras"
+    "%pip install keras\n",
+    "%pip install streamlit"
    ]
   },
   {
